--- a/views/result.ejs
+++ b/views/result.ejs
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheet/design.css">
     <title>Result</title>
 </head>
 <body>
-    <h1 class="text-center">result</h1>
+    <h1 class="text-center mt-4">Search Result <span style="color: gray;">></span> AEVENGERS</h1>
+    <div class="card container mt-4 w-75">
+        <div class="row g-0 h-40">
+          <div class="col-md-3">
+            <img src="..." class="img-fluid rounded-start" alt="movie image">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h1 class="card-title">Card title</h1>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-body-secondary"><b>Last updated:</b> 3 mins ago</small></p>
+              <p class="card-text"><small class="text-body-secondary"><b>Last updated:</b> 3 mins ago</small></p>
+              <p class="card-text"><small class="text-body-secondary"><b>Last updated:</b> 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
